--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-!DOCTYPE html
+<!DOCTYPE html>
+<head>
+  <link href="mainstyle.css" rel="stylesheet">
+  <title>United's Stuff</title>
+</head>
+<html>
+  <body id="home">
+    <header></header>
+    <section>
+      
+    </section>
+    <div id="navbar">
+      <article>
+        <nav role="navigation">
+          <p>
+            <ul id="selectionlist">
+              <li><a href="unitedstars111.github.io">HOME</li>
+              <li>GAMES</li>
+              <li>ART</li>
+              <li>CONTACT</li>
+            </ul>
+          </p>
+      </article>
+    </div>
+  </body>
+</html>
