--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav role="navigation">
           <p>
             <ul id="selectionlist">
-              <li><a href="unitedstars111.github.io">HOME</li>
+              <li><a href="">HOME</li>
               <li>GAMES</li>
               <li>ART</li>
               <li>CONTACT</li>
