--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <nav role="navigation">
           <p>
             <ul id="selectionlist">
-              <li><a href="/">HOME</li>
-              <li><a href="/games">GAMES</li>
-              <li><a href="/art">ART</li>
-              <li><a href="/contact">CONTACT</li>
+              <li><a href="/">HOME</a></li>
+              <li><a href="/games">GAMES</a></li>
+              <li><a href="/art">ART</a></li>
+              <li><a href="/contact">CONTACT</a></li>
             </ul>
           </p>
       </article>
