--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           <p>
             <ul id="selectionlist">
               <li><a href="/">HOME</a></li>
-              <li><a href="/games">GAMES</a></li>
-              <li><a href="/art">ART</a></li>
-              <li><a href="/contact">CONTACT</a></li>
+              <li><a href="/games.html">GAMES</a></li>
+              <li><a href="/art.html">ART</a></li>
+              <li><a href="/contact.html">CONTACT</a></li>
             </ul>
           </p>
       </article>
