--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div id="maintext">
       <p id="intro">
-        Welcome to my website! :D 
+        <h1>Welcome to my website! :D</h1>
         I'm unitedstars111, and this is where I store all my stuff. Things like games, art, and probably other stuff, idk. This site was launched on 04-05-2025, and I hope i can add a lot of things here!!!!!!!
       </p>
     </div>
