--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <article>
         <nav role="navigation">
           <p>
-            <ul class="selectionlist">
+            <ul id="selectionlist">
               <li><a href="/">HOME</a></li>
               <li><a href="/games.html">GAMES</a></li>
               <li><a href="/art.html">ART</a></li>
