--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <link href="global.css" rel="stylesheet">
+  <link href="/global.css" rel="stylesheet">
   <title>United's Stuff</title>
 </head>
 <html>
