--- a/index.html
+++ b/index.html
@@ -26,5 +26,10 @@
             </ul>
           </p>
       </article>
+      </div>
+    <div id="updatebar">
+      <h1>Updates:</h1>
+      <p>2025/04/11: Website launch! :D</p>
+      </div>
   </body>
 </html>
