--- a/index.html
+++ b/index.html
@@ -14,18 +14,13 @@
       </p>
     </div>
     </section>
-    <div id="navbar">
-      <article>
-        <nav role="navigation">
-          <p>
-            <ul id="selectionlist">
-              <li><a href="/">HOME</a></li>
-              <li><a href="/games.html">GAMES</a></li>
-              <li><a href="/art.html">ART</a></li>
-            </ul>
-          </p>
-      </article>
-      </div>
+    <nav role="navigation">
+      <ul id="selectionlist">
+        <li><a href="/">HOME</a></li>
+        <li><a href="/games.html">GAMES</a></li>
+        <li><a href="/art.html">ART</a></li>
+      </ul>
+    </nav>
     <div id="updatebar">
       <h1>Updates:</h1>
       <p>2025/04/11: Website launch! :D</p>
