--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </p>
     </div>
     </section>
-    <nav role="navigation">
+    <nav class="navbar">
       <ul id="selectionlist">
         <li><a href="/">HOME</a></li>
         <li><a href="/games.html">GAMES</a></li>
