--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <html>
   <body id="home">
+  <script src="index.js"></script>
     <header></header>
     <section>
     <div id="topwrapper">
