--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <div id="updatebar">
       <h1>Updates:</h1>
       <p>2025/04/11: Website launch! :D</p>
+      <hr>
+      <p>2025/04/13: i hate javascript i hate javascript i hate javascript i hate javascript i hate javascript</p>
       </div>
     <script src="index.js"></script>
   </body>
