--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="/">HOME</a></li>
         <li><a href="/games.html">GAMES</a></li>
         <li><a href="/art.html">ART</a></li>
-        <li><a href="/guides.html">GUIDES</li>
+        <li><a href="/guides.html">GUIDES</a></li>
       </ul>
     </nav>
     <div id="updatebar">
