--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
         <li><a href="/">HOME</a></li>
         <li><a href="/games.html">GAMES</a></li>
         <li><a href="/art.html">ART</a></li>
-        <li><a href="/guides.html">GUIDES</a></li>
+        <li class="dropdown">
+          <a href="javascript:void(0)" class="drpdwn">Guides</a>
+          <div class="dropdown-content">
+            <a href="/lnguide">Love Nikki crafting guide</a>
+          </div>
+        </li>
       </ul>
     </nav>
     <div id="updatebar">
