--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="/games.html">GAMES</a></li>
         <li><a href="/art.html">ART</a></li>
         <li class="dropdown">
-          <a href="javascript:void(0)" class="drpdwn">Guides</a>
+          <button class="drpdwn">Guides</button>
           <div class="dropdown-content">
             <a href="/lnguide">Love Nikki crafting guide</a>
           </div>
