--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li class="dropdown">
           <button class="drpdwn">Guides</button>
           <div class="dropdown-content">
-            <a href="/lnguide">Love Nikki crafting guide</a>
+            <a href="/lnguide.html">Love Nikki crafting guide</a>
           </div>
         </li>
       </ul>
