--- a/guides.html
+++ b/guides.html
@@ -22,6 +22,12 @@
         <li><a href="/guides.html">GUIDES</a></li>
       </ul>
     </nav>
+    <div id="updatebar">
+      <h1>Updates:</h1>
+      <p>2025/04/11: Website launch! :D</p>
+      <hr>
+      <p>2025/04/13: i hate javascript i hate javascript i hate javascript i hate javascript i hate javascript</p>
+      </div>
     <div id="mainbox">
       <ul id="guidelist">
         <li><a href="/lnguide.html">Love Nikki Crafting Guide (Global)</a></li>
