--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <link href="/global.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
-  <style> body, a, a:hover { cursor:url(’cursor.png’), auto }</style>
+  <style> body, a, a:hover { cursor:url("images/cursor.png"), auto }</style>
   <title>United's Stuff</title>
 </head>
 <html>
