--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       <hr>
       <p>2025/04/13: i hate javascript i hate javascript i hate javascript i hate javascript i hate javascript</p>
       </div>
+    <div id="welcome">
+      <p>I'm unitedstars111, and this is where I store all my stuff. Things like games, art, and probably other stuff, idk. This site was launched on 04-05-2025, and I hope i can add a lot of things here!!!!!!!</p>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
