--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 </head>
 <html>
   <body id="home">
+    <!-- slideout code by sppice -->
+    <div id="oneout"><span class="onetitle">
+ 
+MENU
+ 
+</span><div id="oneout_inner">
+<center>
+ 
+MENU
+ 
+<br></center></div></div>
     <header></header>
     <section>
     <div id="topwrapper">
