--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ MENU
       <p>2025/04/13: i hate javascript i hate javascript i hate javascript i hate javascript i hate javascript</p>
       </div>
     <div id="welcome">
-      <img src="images/welcome.png" alt="Welcome banner">
+      <img id="welcomebanner" src="images/welcome.png" alt="Welcome banner">
       <p>I'm unitedstars111, and this is where I store all my stuff. Things like games, art, and probably other stuff, idk. This site was launched on 04-05-2025, and I hope i can add a lot of things here!!!!!!!</p>
     </div>
     <script src="index.js"></script>
